--- a/app/src/main/res/layout/fragment_protection.xml
+++ b/app/src/main/res/layout/fragment_protection.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/TextAppearance.AppCompat.Display1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/pa2"
+    android:rotationX="0"
+    android:rotationY="0"
+    tools:context=".MainActivity">
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="464dp"
+        android:layout_height="352dp"
+        app:srcCompat="@drawable/drapeau"
+        tools:layout_editor_absoluteX="-57dp"
+        tools:layout_editor_absoluteY="-50dp" />
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
