--- a/app/src/main/res/layout/fragment_protection.xml
+++ b/app/src/main/res/layout/fragment_protection.xml
@@ -14,10 +14,12 @@
         android:id="@+id/imageView2"
         android:layout_width="464dp"
         android:layout_height="352dp"
-        app:srcCompat="@drawable/drapeau"
-        tools:layout_editor_absoluteX="-57dp"
-        tools:layout_editor_absoluteY="-50dp" />
-
+        android:contentDescription="@string/Countries"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/drapeau" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
