--- a/app/src/main/res/layout/fragment_volunteer.xml
+++ b/app/src/main/res/layout/fragment_volunteer.xml
@@ -8,4 +8,67 @@
     tools:context=".MainActivity"
     >
 
+
+    <Button
+        android:id="@+id/button2"
+        android:background="@drawable/btm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="567dp"
+        android:layout_marginEnd="155dp"
+        android:layout_marginBottom="116dp"
+        android:text="SEND"
+
+
+         />
+
+    <EditText
+        android:id="@+id/textView2"
+        android:layout_width="281dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="402dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="235dp"
+        android:background="@drawable/hh"
+
+        android:hint="type your request  …." />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="62dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="82dp"
+        android:layout_marginTop="286dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="383dp"
+        android:background="@drawable/admin" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="280dp"
+        android:layout_marginTop="292dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="388dp"
+        app:srcCompat="@drawable/allo" />
+
 </RelativeLayout>
