--- a/app/src/main/res/layout/fragment_protection.xml
+++ b/app/src/main/res/layout/fragment_protection.xml
@@ -66,13 +66,14 @@
         android:id="@+id/textView8"
         android:layout_width="229dp"
         android:layout_height="40dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="132dp"
         android:text="#مع بعضنا غدوة خير"
         android:textColor="#FFFFFF"
         android:textSize="25dp"
         android:texteColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.994"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
