--- a/app/src/main/res/layout/fragment_volunteer.xml
+++ b/app/src/main/res/layout/fragment_volunteer.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="567dp"
         android:layout_marginEnd="155dp"
         android:layout_marginBottom="116dp"
-        android:text="SEND"
+        android:text="@string/Sendbutton"
 
 
          />
@@ -41,7 +41,7 @@
         android:layout_marginBottom="235dp"
         android:background="@drawable/hh"
 
-        android:hint="type your request  …." />
+        android:hint="@string/editehint" />
 
     <TextView
         android:id="@+id/textView3"
