add languages support(arabic tn et english)and fonts directory

--- a/app/src/main/res/layout/landing.xml
+++ b/app/src/main/res/layout/landing.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.73"
 
-        tools:text="@string/Startbutton" />
+        tools:text="@string/starbutton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
