--- a/app/src/main/res/layout/fragment_protection.xml
+++ b/app/src/main/res/layout/fragment_protection.xml
@@ -25,27 +25,27 @@
         android:id="@+id/textView"
         android:layout_width="189dp"
         android:layout_height="78dp"
-        android:layout_marginStart="188dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginBottom="340dp"
         android:text="شد دارك"
         android:textColor="#FFFFFF"
+
         android:textSize="40dp"
-        android:texteColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="366dp"
         android:layout_height="141dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="220dp"
         android:text="ما نسلموش على بعضنا و ما نسلموش في بعضنا و أقسم مع جارك و عاونو كان يحتاجك لكلنا يد وحدة نحميو رواحنا و صغارنا و ناس الي نحبوهم"
         android:textColor="#FFFFFF"
+
         android:textSize="25dp"
-        android:texteColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -53,13 +53,14 @@
         android:layout_width="265dp"
         android:layout_height="37dp"
         android:layout_marginStart="144dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="160dp"
         android:text="#شد دارك و احمي صغارك"
         android:textColor="#FFFFFF"
+
         android:textSize="25dp"
-        android:texteColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -70,7 +71,7 @@
         android:text="#مع بعضنا غدوة خير"
         android:textColor="#FFFFFF"
         android:textSize="25dp"
-        android:texteColor="#FFFFFF"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
