--- a/app/src/main/res/layout/fragment_protection.xml
+++ b/app/src/main/res/layout/fragment_protection.xml
@@ -8,7 +8,8 @@
     android:background="@drawable/pa2"
     android:rotationX="0"
     android:rotationY="0"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/protection_page">
 
     <ImageView
         android:id="@+id/imageView2"
