--- a/app/src/main/res/layout/fragment_protection.xml
+++ b/app/src/main/res/layout/fragment_protection.xml
@@ -5,7 +5,7 @@
     style="@style/TextAppearance.AppCompat.Display1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pa2"
+    android:background="@drawable/backgroud"
     android:rotationX="0"
     android:rotationY="0"
     tools:context=".MainActivity"
