fixer les warning et les erreur de translation

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -16,7 +16,7 @@
         android:layout_margin="40dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/radius"
-        android:text="Start"
+        android:text="@string/start"
         android:textColor="#FFEB3B"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
