--- a/app/src/main/res/layout/fragment_volunteer.xml
+++ b/app/src/main/res/layout/fragment_volunteer.xml
@@ -34,13 +34,16 @@
                 android:layout_marginLeft="-50dp"
                 app:srcCompat="@drawable/allo" />
         </LinearLayout>
+
         <EditText
             android:id="@+id/textView2"
             android:layout_width="281dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             android:background="@drawable/hh"
             android:hint="@string/requesthint"
-            android:layout_marginTop="50dp"/>
+            android:inputType="text"
+            android:autofillHints="" />
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
