add code configuration firebase et code VolunteerFragment.java

--- a/app/src/main/res/layout/fragment_volunteer.xml
+++ b/app/src/main/res/layout/fragment_volunteer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pa3"
-    tools:context=".MainActivity"
+    tools:context=".VolunteerFragment"
     android:id="@+id/volunteer_page">
 
 
@@ -38,7 +38,7 @@
         </LinearLayout>
 
         <EditText
-            android:id="@+id/textView2"
+            android:id="@+id/Message"
             android:layout_width="281dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -47,7 +47,7 @@
             android:inputType="text"
             android:autofillHints="" />
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btm"
