--- a/app/src/main/res/layout/fragment_volunteer.xml
+++ b/app/src/main/res/layout/fragment_volunteer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pa3"
-    tools:context=".MainActivity"
+    tools:context=".VolunteerFragment"
     android:id="@+id/volunteer_page">
 
 
@@ -29,7 +29,7 @@
                 android:background="@drawable/admin" />
 
             <ImageButton
-                android:id="@+id/btnAllo"
+                android:id="@+id/btncall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="-50dp"
